--- a/processlogicapp.json
+++ b/processlogicapp.json
@@ -169,7 +169,41 @@
                     }
                 }
             }
-        }    
+        },
+         {
+            "type": "Microsoft.Web/connections",
+            "apiVersion": "2016-06-01",
+            "name": "[parameters('connections_office365_name')]",
+            "location": "northcentralus",
+            "kind": "V1",
+            "properties": {
+                "displayName": "rohan@techtiq.com.au",
+                "statuses": [
+                    {
+                        "status": "Connected"
+                    }
+                ],
+                "customParameterValues": {},
+                "nonSecretParameterValues": {},
+                "createdTime": "2022-03-02T11:51:23.4177919Z",
+                "changedTime": "2022-03-02T11:51:36.3247887Z",
+                "api": {
+                    "name": "[parameters('connections_office365_name')]",
+                    "displayName": "Office 365 Outlook",
+                    "description": "Microsoft Office 365 is a cloud-based service that is designed to help meet your organization's needs for robust security, reliability, and user productivity.",
+                    "iconUri": "[concat('https://connectoricons-prod.azureedge.net/releases/v1.0.1538/1.0.1538.2621/', parameters('connections_office365_name'), '/icon.png')]",
+                    "brandColor": "#0078D4",
+                    "id": "[concat('/subscriptions/5df527a2-240d-44fe-a163-2488e30b80fb/providers/Microsoft.Web/locations/northcentralus/managedApis/', parameters('connections_office365_name'))]",
+                    "type": "Microsoft.Web/locations/managedApis"
+                },
+                "testLinks": [
+                    {
+                        "requestUri": "[concat('https://management.azure.com:443/subscriptions/5df527a2-240d-44fe-a163-2488e30b80fb/resourceGroups/infrasetup/providers/Microsoft.Web/connections/', parameters('connections_office365_name'), '/extensions/proxy/testconnection?api-version=2016-06-01')]",
+                        "method": "get"
+                    }
+                ]
+            }
+         }   
     ],
     "outputs": {}
 }
